<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddEvent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/parentLayout">
        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="50dp"
            android:layout_height="40dp"
            android:layout_margin="10dp"
            android:src="@drawable/icon"
            android:id="@+id/iconImageView"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/nameTextView"
            android:text="Harshit Khandelwal"
            android:layout_marginTop="10dp"
            android:layout_toRightOf="@id/iconImageView"/>
    </RelativeLayout>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/parentLayout"
        android:id="@+id/titleTextView"
        android:layout_marginBottom="20dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:hint="@string/title"
        android:fontFamily="sans-serif-condensed"
        android:textColor="#000000"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
        android:paddingBottom="20dp"
        android:paddingLeft="5dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/titleTextView"
        android:id="@+id/descriptionTextView"
        android:layout_marginBottom="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:hint="@string/description"
        android:fontFamily="sans-serif-condensed"
        android:textColor="#000000"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
        android:paddingBottom="20dp"
        android:paddingLeft="5dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/descriptionTextView"
        android:id="@+id/evenLocationVIew"
        android:layout_marginBottom="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:hint="@string/eventlocation"
        android:fontFamily="sans-serif-condensed"
        android:textColor="#000000"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
        android:paddingBottom="20dp"
        android:paddingLeft="5dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:id="@+id/linearLayout"
        android:orientation="horizontal"
        android:layout_below="@id/evenLocationVIew">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="40dp"
            style="@style/sectionHeader"
            android:id="@+id/startDate"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:hint="@string/startdate"
            android:padding="10dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:fontFamily="sans-serif-condensed"/>
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="40dp"
            style="@style/sectionHeader"
            android:id="@+id/startTime"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:hint="@string/starttime"
            android:padding="10dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:fontFamily="sans-serif-condensed"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:id="@+id/linearLayout1"
        android:orientation="horizontal"
        android:layout_below="@id/linearLayout">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="40dp"
            style="@style/sectionHeader"
            android:id="@+id/endDate"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:hint="@string/endDate"
            android:padding="10dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:fontFamily="sans-serif-condensed"/>
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="40dp"
            style="@style/sectionHeader"
            android:id="@+id/endTime"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:hint="@string/endTIme"
            android:padding="10dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:fontFamily="sans-serif-condensed"/>
    </LinearLayout>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:text="@string/addphoto"
        android:background="@color/colorPrimary"
        android:layout_below="@id/linearLayout1"
        android:padding="10dp"
        android:id="@+id/addPhoto"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="15dp"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/addPhoto"
        android:layout_margin="10dp">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:id="@+id/cancelDetails"
            android:background="@color/colorPrimary"
            android:text="@string/cancel"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_alignParentBottom="true"
            android:layout_toLeftOf="@id/cancelDetails"
            android:id="@+id/saveDetails"
            android:layout_marginRight="15dp"
            android:background="@color/colorPrimary"
            android:text="@string/save"/>
    </RelativeLayout>



</RelativeLayout>